Add an example of the test component in use.

--- a/element-a.html
+++ b/element-a.html
@@ -3,6 +3,7 @@ This is test element A.
 
 @element test-element-a
 @blurb This is a blurb for test-element-a
+@example example.html
 @preview preview.png
 -->
 <polymer-element name="test-element-a" attributes="foo bar">
