--- a/element-a.html
+++ b/element-a.html
@@ -4,6 +4,7 @@ This is test element A.
 @element test-element-a
 @blurb This is a blurb for test-element-a
 @preview preview.png
+@demo index.html
 -->
 <polymer-element name="test-element-a" attributes="foo bar">
 
