--- a/element-a.html
+++ b/element-a.html
@@ -1,5 +1,5 @@
 <!--
-This is test element A.
+test-element-a is a fascinating element, as described here in the comments.
 
 @element test-element-a
 @blurb This is a blurb for test-element-a
