--- a/element-a.html
+++ b/element-a.html
@@ -2,7 +2,7 @@
 test-element-a is a fascinating element, as described here in the comments.
 
 @element test-element-a
-@blurb This is a blurb for test-element-a
+@blurb This is a summary for test-element-a
 @preview preview.png
 @demo index.html
 -->
