Update test element constructor to Polymer 0.4 syntax.

--- a/element-a.html
+++ b/element-a.html
@@ -15,7 +15,7 @@ test-element-a is a fascinating element, as described here in the comments.
  * @event change
  * @param {object} detail Details of the event
  */
-Polymer( "test-element-a", {
+Polymer({
 
   /**
    * The element's foo attribute
